k8s/base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: three-tier
spec:
  selector: { app: mysql }
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
